--- a/app/views/tufts_teis/_toc.html.erb
+++ b/app/views/tufts_teis/_toc.html.erb
@@ -5,7 +5,7 @@
               <a data-toggle="modal" href="#myImageGallery"><i class="icon-picture"></i></a></td>
             <td><a data-toggle="modal" href="#myImageGallery"> View all images in this book </a></td>
           </tr>
-          <%= raw Tufts::TeiMethods.get_toc(@document_fedora) %>
+          <%= raw toc_results %>
           </tbody>
 
         </table>
