--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -1,6 +1,7 @@
 <!-- LEFT SIDE FOR OBJECT TITLE -->
 <% stylesheet_links << "tei/tei.css" %>
 <% metadata = Tufts::ModelMethods.get_metadata(@document_fedora) %>
+<% toc_results, chapter_list =  Tufts::TeiMethods.get_toc(@document_fedora) %>
 
 <div class="row">
   <div class="span12">
@@ -12,12 +13,12 @@
 <hr>
 <div class="row">
   <div class="span7">
-    <%= render :partial => 'tufts_teis/bookreader_pane', :locals => {:metadata => metadata} %>
+    <%= render :partial => 'tufts_teis/bookreader_pane', :locals => {:metadata => metadata,:chapter_list => chapter_list} %>
   </div>
 
 
   <div class="span5">
-    <%= render :partial => 'tufts_teis/metadata_pane', :locals => {:metadata => metadata} %>
+    <%= render :partial => 'tufts_teis/metadata_pane', :locals => {:metadata => metadata,:toc_results => toc_results} %>
   </div>
 
 
