--- a/app/views/tufts_teis/_bookreader_pane.html.erb
+++ b/app/views/tufts_teis/_bookreader_pane.html.erb
@@ -1,10 +1,9 @@
-<% if false %>
 <div class="pull-right">
-  <button class="btn btn-mini disabled prev_page"><i class=" icon-chevron-left"></i></button>
-  <button class="btn btn-mini next_page"><i class=" icon-chevron-right"></i></button>
 
+  <button class="btn btn-mini <%=chapter_list.index(params[:chapter]) == 0 ? 'disabled ' :'' %>prev_page"><i class=" icon-chevron-left"></i></button>
+  <button class="btn btn-mini next_page <%=chapter_list.index(params[:chapter]) == (chapter_list.length - 1) ? 'disabled ' :'' %>"><i class=" icon-chevron-right"></i></button>
 </div>
-<% end %>
+
 
 <%= raw Tufts::TeiMethods.show_tei(@document_fedora,params[:chapter]) %>
 
@@ -65,13 +64,8 @@
   </tbody>
 </table>
 <% end %>
-
-<% if false %>
-
 <div class="pull-right">
-  <button class="btn btn-mini disabled prev_page"><i class=" icon-chevron-left"></i></button>
-  <button class="btn btn-mini next_page"><i class=" icon-chevron-right"></i></button>
 
+  <button class="btn btn-mini <%=chapter_list.index(params[:chapter]) == 0 ? 'disabled ' :'' %>prev_page"><i class=" icon-chevron-left"></i></button>
+  <button class="btn btn-mini next_page <%=chapter_list.index(params[:chapter]) == (chapter_list.length - 1) ? 'disabled ' :'' %>"><i class=" icon-chevron-right"></i></button>
 </div>
-
-<% end %>
