--- a/app/views/tufts_teis/_show.html.erb
+++ b/app/views/tufts_teis/_show.html.erb
@@ -1,5 +1,6 @@
 <!-- LEFT SIDE FOR OBJECT TITLE -->
 <% metadata = Tufts::ModelMethods.get_metadata(@document_fedora) %>
+<% toc_results, chapter_list =  Tufts::TeiMethods.get_toc(@document_fedora) %>
 
 <div class="row">
   <div class="span12">
@@ -18,7 +19,7 @@
 
 
   <div class="span6">
-    <%= render :partial => 'tufts_teis/metadata_pane', :locals => {:metadata => metadata} %>
+    <%= render :partial => 'tufts_teis/metadata_pane', :locals => {:metadata => metadata, :toc_results => toc_results} %>
   </div>
 
 
