adding mustachejs for templating the overlays

--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -2,6 +2,7 @@
 <% stylesheet_links << "tei/tei.css" %>
 <% metadata = Tufts::ModelMethods.get_metadata(@document_fedora) %>
 <% toc_results, chapter_list =  Tufts::TeiMethods.get_toc(@document_fedora) %>
+<% javascript_includes << "mustache/mustache.js" %>
 
 <div class="row">
   <div class="span12">
