fix for the little box

--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -221,26 +221,7 @@
 </div>   <!--end modal -->
 <!-Image Overlay Modal-->
 
-<div class="modal fade modal_650wide" id="myImageOverlay">
-  <div class="modal-header">
-    <a href="#">< Back</a>
-    <button class="close" data-dismiss="modal">&times;</button>
-
-  </div>
-
-
-  <div class="modal-body">
-    <img class="centerimage" src="/assets/img/imageoverlay_placeholder.png" width="491" height="500">
-
-    <div class="pull-right"><h6><a hre="#">go to image entry <i class="icon-share"/></a></h6></div>
-    The Goose and the Gridiron Citable <br>
-    1866<br>
-    This image is a component of the text: Stories from the Streets of London
-
-  </div>
-
-
-</div>
+<div class="modal fade modal_650wide" id="myImageOverlay"></div>
 
 <!-Image Gallery Modal-->
 
