Search results page used to say "1 Results", plural.  Now it says "1 Result", singular.

--- a/app/views/catalog/_results.html.erb
+++ b/app/views/catalog/_results.html.erb
@@ -19,7 +19,7 @@
       <div class="span9">
         <br/>
 
-        <h2><%= @response.total %> Results</h2>
+        <h2><%= @response.total %> Result<%= @response.total == 1 ? "" : "s" %></h2>
         <% if false %>
             <%= render_pagination_info @response, :entry_name => 'item' %>
             l
