--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -24,5 +24,19 @@
 
 
 </div>
+<script id="image_overlay_template" type="text/template">
+  <div class="modal-header">
+    <a href="{{back_url}}">< Back</a>
+    <button class="close" data-dismiss="modal">&times;</button>
 
+  </div>
+  <div class="modal-body">
+    <img class="centerimage" src="{{image_url}}" width="491" height="500">
+
+    <div class="pull-right"><h6><a hre="{{item_link}}">go to image entry <i class="icon-share"></i></a></h6></div>
+    {{item_title}}<br>
+    {{item_date}}<br>
+    {{item_description}}
+  </div>
+</script>
 
