--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -1,7 +1,7 @@
 <!-- LEFT SIDE FOR OBJECT TITLE -->
 <% stylesheet_links << "tei/tei.css" %>
 <% metadata = Tufts::ModelMethods.get_metadata(@document_fedora) %>
-<% toc_results, chapter_list =  Tufts::TeiMethods.get_toc(@document_fedora) %>
+<% toc_results, chapter_list = Tufts::TeiMethods.get_toc(@document_fedora) %>
 <% javascript_includes << "mustache/mustache.js" %>
 
 <div class="row">
@@ -14,12 +14,12 @@
 <hr>
 <div class="row">
   <div class="span7">
-    <%= render :partial => 'tufts_teis/bookreader_pane', :locals => {:metadata => metadata,:chapter_list => chapter_list} %>
+    <%= render :partial => 'tufts_teis/bookreader_pane', :locals => {:metadata => metadata, :chapter_list => chapter_list} %>
   </div>
 
 
   <div class="span5">
-    <%= render :partial => 'tufts_teis/metadata_pane', :locals => {:metadata => metadata,:toc_results => toc_results} %>
+    <%= render :partial => 'tufts_teis/metadata_pane', :locals => {:metadata => metadata, :toc_results => toc_results} %>
   </div>
 
 
@@ -36,6 +36,194 @@
     {{item_title}}<br>
     {{item_date}}<br>
     {{item_description}}
+  </div>
+</script>
+
+<script id="gallery_overlay_template" type="text/template">
+  <div class="modal-header">
+    <h3>Illustrations from Stories from the Streets of London </h3>
+    <button class="close" data-dismiss="modal">&times;</button>
+  </div>
+  <div class="modal-body">
+    <ul class="thumbnails  ">
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/aloneintheeast-tuhome.jpg" alt=""></a>
+          <div class="caption_oneline ">
+            <a href="#">
+              Tufts and Local History </a>
+          </div>
+        </div>
+      </li>
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/escholar-tuhome.jpg" alt=""></a>
+          <div class="caption_oneline ">
+            <a href="#">
+              E-Scholarship </a>
+          </div>
+        </div>
+      </li>
+
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/murrow-tuhome.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              Edward R. Murrow Collection</a>
+          </div>
+        </div>
+      </li>
+
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/wriston-tuhome.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              Walter B. Wriston Collection </a>
+
+          </div>
+        </div>
+      </li>
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/prussia-tuhome-temp.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              A New Nation Votes </a>
+
+          </div>
+        </div>
+      </li>
+
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/prussia-tuhome-temp.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              A New Nation Votes </a>
+
+          </div>
+        </div>
+      </li>
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/prussia-tuhome-temp.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              A New Nation Votes </a>
+
+          </div>
+        </div>
+      </li>
+
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/prussia-tuhome-temp.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              A New Nation Votes </a>
+
+          </div>
+        </div>
+      </li>
+
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/aloneintheeast-tuhome.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              Tufts and Local History </a>
+
+          </div>
+        </div>
+      </li>
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/escholar-tuhome.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              E-Scholarship </a>
+          </div>
+        </div>
+      </li>
+
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/murrow-tuhome.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              Edward R. Murrow Collection</a>
+          </div>
+        </div>
+      </li>
+
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/escholar-tuhome.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              E-Scholarship </a>
+          </div>
+        </div>
+      </li>
+
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/murrow-tuhome.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              Edward R. Murrow Collection</a>
+          </div>
+        </div>
+      </li>
+
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/wriston-tuhome.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              Walter B. Wriston Collection </a>
+
+          </div>
+        </div>
+      </li>
+      <li class="span2">
+        <div class="thumbnail">
+          <a href="#"><img src="assets/img/home/wriston-tuhome.jpg" alt=""></a>
+
+          <div class="caption_oneline ">
+            <a href="#">
+              Walter B. Wriston Collection </a>
+
+          </div>
+        </div>
+      </li>
+
+
+    </ul>
+
+
+  </div>
+
+
+  <div class="facet_pagination bottom">
+    <div class="prev_next_links">
+      <span class="disabled ui-state-active prev_page">« Previous</span> |
+      <a href="/catalog/facet/names_facet?catalog_facet.offset=20" class="next_page">Next »</a></div>
+
   </div>
 </script>
 
