--- a/app/views/tufts_teis/_toc.html.erb
+++ b/app/views/tufts_teis/_toc.html.erb
@@ -2,8 +2,8 @@
           <tbody>
           <tr class="borderbottom">
             <td class="collapse_td  ">
-              <a class="myImageGalleryLauncher" href="#myImageGallery"><i class="icon-picture"></i></a></td>
-            <td><a class="myImageGalleryLauncher" href="#myImageGallery"> View all images in this book </a></td>
+              <a data-pid="<%= params[:id] %>" class="myImageGalleryLauncher" href="#myImageGallery"><i class="icon-picture"></i></a></td>
+            <td><a data-pid="<%= params[:id] %>" class="myImageGalleryLauncher" href="#myImageGallery"> View all images in this book </a></td>
           </tr>
           <%= raw toc_results %>
           </tbody>
