gallery without paging for now just a big dump of images

--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -46,172 +46,18 @@
   </div>
   <div class="modal-body">
     <ul class="thumbnails  ">
+      {{#figures}}
       <li class="span2">
         <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/aloneintheeast-tuhome.jpg" alt=""></a>
-          <div class="caption_oneline ">
-            <a href="#">
-              Tufts and Local History </a>
-          </div>
-        </div>
-      </li>
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/escholar-tuhome.jpg" alt=""></a>
-          <div class="caption_oneline ">
-            <a href="#">
-              E-Scholarship </a>
-          </div>
-        </div>
-      </li>
-
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/murrow-tuhome.jpg" alt=""></a>
+          <a href="#"><img src="/file_assets/thumb/{{pid}}" alt="{{caption}}"></a>
 
           <div class="caption_oneline ">
-            <a href="#">
-              Edward R. Murrow Collection</a>
-          </div>
-        </div>
-      </li>
-
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/wriston-tuhome.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              Walter B. Wriston Collection </a>
+            <a href="/catalog/{{pid}}">{{caption}}</a>
 
           </div>
         </div>
       </li>
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/prussia-tuhome-temp.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              A New Nation Votes </a>
-
-          </div>
-        </div>
-      </li>
-
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/prussia-tuhome-temp.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              A New Nation Votes </a>
-
-          </div>
-        </div>
-      </li>
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/prussia-tuhome-temp.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              A New Nation Votes </a>
-
-          </div>
-        </div>
-      </li>
-
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/prussia-tuhome-temp.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              A New Nation Votes </a>
-
-          </div>
-        </div>
-      </li>
-
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/aloneintheeast-tuhome.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              Tufts and Local History </a>
-
-          </div>
-        </div>
-      </li>
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/escholar-tuhome.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              E-Scholarship </a>
-          </div>
-        </div>
-      </li>
-
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/murrow-tuhome.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              Edward R. Murrow Collection</a>
-          </div>
-        </div>
-      </li>
-
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/escholar-tuhome.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              E-Scholarship </a>
-          </div>
-        </div>
-      </li>
-
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/murrow-tuhome.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              Edward R. Murrow Collection</a>
-          </div>
-        </div>
-      </li>
-
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/wriston-tuhome.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              Walter B. Wriston Collection </a>
-
-          </div>
-        </div>
-      </li>
-      <li class="span2">
-        <div class="thumbnail">
-          <a href="#"><img src="assets/img/home/wriston-tuhome.jpg" alt=""></a>
-
-          <div class="caption_oneline ">
-            <a href="#">
-              Walter B. Wriston Collection </a>
-
-          </div>
-        </div>
-      </li>
-
+      {{/figures}}
 
     </ul>
 
