--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -41,7 +41,7 @@
 
 <script id="gallery_overlay_template" type="text/template">
   <div class="modal-header">
-    <h3>Illustrations from Stories from the Streets of London </h3>
+    <h3>{{title}}</h3>
     <button class="close" data-dismiss="modal">&times;</button>
   </div>
   <div class="modal-body">
