some simple paging for gallery -- first pass

--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -47,7 +47,7 @@
   <div class="modal-body">
     <ul class="thumbnails  ">
       {{#figures}}
-      <li class="span2">
+      <li class="span2 hidden thumb_item">
         <div class="thumbnail">
           <a href="#"><img src="/file_assets/thumb/{{pid}}" alt="{{caption}}"></a>
 
@@ -68,7 +68,7 @@
   <div class="facet_pagination bottom">
     <div class="prev_next_links">
       <span class="disabled ui-state-active prev_page">« Previous</span> |
-      <a href="/catalog/facet/names_facet?catalog_facet.offset=20" class="next_page">Next »</a></div>
+      <a href="#" class="next_page">Next »</a></div>
 
   </div>
 </script>
