trying to lazy load gallery images

--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -49,7 +49,7 @@
       {{#figures}}
       <li class="span2 hidden thumb_item">
         <div class="thumbnail">
-          <a href="#"><img src="/file_assets/thumb/{{pid}}" alt="{{caption}}"></a>
+          <a href="#"><img class="lazy" data-original="/file_assets/thumb/{{pid}}" src="/images/grey.gif" width="120" height="80" alt="{{caption}}"></a>
 
           <div class="caption_oneline ">
             <a href="/catalog/{{pid}}">{{caption}}</a>
