--- a/app/views/tufts_teis/_toc.html.erb
+++ b/app/views/tufts_teis/_toc.html.erb
@@ -7,8 +7,10 @@
           </tr>
           <%= raw toc_results %>
           </tbody>
-
         </table>
+<% javascript_includes << "tei/jquery.lazyload.js" %>
 <% javascript_includes << "tei/tei.js" %>
+
+
 
 
