move year params from rack params into localized params so they become pills

--- a/app/views/catalog/_constraints.html.erb
+++ b/app/views/catalog/_constraints.html.erb
@@ -11,6 +11,13 @@
              (localized_params[:people].nil? || localized_params[:people].length() == 0) && 
              (localized_params[:place].nil? || localized_params[:place].length() == 0) && 
              (localized_params[:topic].nil? || localized_params[:topic].length() == 0) -%>
+   <%
+      rack_req = @_env['rack.request.query_hash']
+      localized_params['year_start'] = rack_req['year_start']
+      localized_params['year_end'] = rack_req['year_end']
+
+
+   %>
   <div class="span2" style="text-align: right;">
     <h6>You searched for:</h6>
   </div>
