--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -124,8 +124,9 @@
 
 <div class="container">
   <div class="content">
-
+    <% if false %>
     <%= render :partial => '/flash_msg' %>
+    <% end %>
     <%= yield %>
   </div>
   <%= render :partial => 'shared/footer' %>
