ELE-1757 replaced the picture of Bismarck on a horse with a cropped version of the collage Mélanie made on the homepage

--- a/app/views/dca_text/_collections.html.erb
+++ b/app/views/dca_text/_collections.html.erb
@@ -39,9 +39,9 @@
  </li>
  <li class="span25">
           <div class="thumbnail">
-            <a href="/about/a_new_nation_votes"><img src="/assets/img/home/prussia-tuhome-temp.jpg" alt=""></a>
+            <a href="/about/a_new_nation_votes"><img src="/assets/img/home/election-homepage.png" alt=""></a>
             <div class="caption">
-             <a href="/about/a_new_nation_votes"><h5>A new nation votes</h5></a>
+             <a href="/about/a_new_nation_votes"><h5>A New Nation Votes</h5></a>
               
             </div>
           </div>
