TDLR-350 putting the correct text on the advanced search page, and correcting the heading level

--- a/app/views/dca_text/_advanced_search_tips.html.erb
+++ b/app/views/dca_text/_advanced_search_tips.html.erb
@@ -1,3 +1,15 @@
-<h5>Advanced Search Tips</h5>
-<p>Example body text. You can use Simple Search <a rel="tooltip" href="#" data-original-title="first tooltip">to search the digital library</a> to find a document by symbol number or title. Simply enter a title or symbol number and the matching documents will be returned. The search engine knows that certain parts of the <a title="Another tooltip" rel="tooltip" href="#">have a</a> documents in the library--titles, symbol numbers, and so on--are important. Search results that match those special <a title="Another one here too" rel="tooltip" href="#">gateway searches</a> fields will be ranked higher than ordinary search results.</p>
+<h2>Advanced Search Tips</h2>
+      <p class="advanced-help-topic">Use search fields to find specific information and select facets in the left-hand menu to limit the scope of your search.</p>
+      <p class="advanced-help-topic">Search for a specific phrase by surrounding it with quotation marks.</p>
+      <p class="advanced-example-heading">Example:</p>
+      <pre class="advanced-example">"grapes of wrath"</pre>
+      <p class="advanced-help-topic">Use uppercase OR, AND, and NOT to create complex searches.</p>
+      <p class="advanced-example-heading">Examples:</p>
+      <pre class="advanced-example">"frida kahlo" AND exhibitions</pre>
+      <pre class="advanced-example">kyoto NOT protocol</pre>
+    <p class="advanced-help-topic">Use parentheses to group logical sections of your search.</p>
+    <p class="advanced-example-heading">Example:</p>        
+    <pre class="advanced-example">(gay OR lesbian OR transgender) sports</pre>
+
+
 <p><a title="Advanced Search Tips" rel="tooltip" href="#">More Questions?</a></p>
