create a real 404 when obj doesn't exist

--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -1,6 +1,10 @@
 <%-
-  doc_title = (document_show_html_title.nil? || document_show_html_title.empty?) ? @document[:id] : document_show_html_title.first
-  @page_title = "#{doc_title} - #{application_name}" 
+  begin
+    doc_title = (document_show_html_title.nil? || document_show_html_title.empty?) ? @document[:id] : document_show_html_title.first
+    @page_title = "#{doc_title} - #{application_name}"
+  rescue NoMethodError => e
+    raise ActionController::RoutingError.new('Not Found')
+  end
 -%>
 
 <%= render_document_partial @document, params["action"] %>
