DCA-994 website/Google analytics privacy policy approved by Anne

--- a/app/views/about/_menu.html.erb
+++ b/app/views/about/_menu.html.erb
@@ -3,6 +3,7 @@
   <% current_url =  request.env['PATH_INFO'] %>
   <li <%= current_url == "/about/index" ? "class=active_orange" : "" %>><a href="/about/index">About Us</a></li>
   <li <%= current_url == "/contact" ? "class=active_orange" : "" %>><a href="/contact">Contact DCA</a></li>
+  <li <%= current_url == "/about/privacy.html" ? "class=active_orange" : "" %>><a href="/about/privacy.html">Privacy Policy</a></li>
 </ul>
 
 <h6>Featured Exhibits and Collections</h6>
