For JIRA issue TDLR-359 - thumbnails not displayed properly on EAD internal page.

--- a/app/views/catalog/eadinternal.html.erb
+++ b/app/views/catalog/eadinternal.html.erb
@@ -91,9 +91,9 @@
       row_s = row.to_s
       item_title, item_paragraphs, item_labels, item_values, page, thumbnail, next_level_items = Tufts::EADMethods.get_series_item_info(series_item)
       is_folder = !next_level_items.nil? && !next_level_items.empty?
-      expand_collapse = (is_folder ? "<a href=\"javascript:toggleDisplay('#img" + row_s + "', " + (row + 1).to_s + ", " + (row + next_level_items.size).to_s + ");\"><img id=\"img" + row_s + "\" src=\"/assets/img/button_collapse.png\" width=\"11\" height=\"11\" alt=\"collapse\" /></a>" : "&nbsp;")
+      expand_collapse = (is_folder ? "<a href=\"javascript:toggleDisplay('#img" + row_s + "', " + (row + 1).to_s + ", " + (row + next_level_items.size).to_s + ");\"><img class=\"folderRowToggler\" id=\"img" + row_s + "\" src=\"/assets/img/button_collapse.png\" width=\"11\" height=\"11\" alt=\"collapse\" /></a>" : "&nbsp;")
 %>
-      <tr class="folderRow">           <!-- folderRow is not for styling purposes - that might be hacky... -->
+      <tr class="folderRow">
         <td class="collapse_td"><%= raw expand_collapse %></td>
         <td<%= raw (is_folder ? " class=\"ead_table_title\"" : "") %>><%= raw (is_folder ? "<a href=\"javascript:toggleDisplay('#img" + row_s + "', " + (row + 1).to_s + ", " + (row + next_level_items.size).to_s + ");\">" + item_title + "</a>" : item_title) %>
 <%    if is_folder %>
