TDLR-377 added images to the static pages for NNV, E scholarship, Wriston, Dagomba; TDLR-373 added a second-level header for the above.

--- a/app/views/about/a_new_nation_votes.html.erb
+++ b/app/views/about/a_new_nation_votes.html.erb
@@ -14,6 +14,21 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
+        <h2>A New Nation Votes: American Election Returns 1787-1825</h2>
+
+        <p>
+
+        <div id="static_thumbnail">
+          <ul class="thumbnails ">
+            <li class="span3">
+              <div class="thumbnail">
+                <img src="/assets/img/elections.png" alt="">
+
+              </div>
+            </li>
+          </ul>
+        </div>
+
           <p>"<a href="http://elections.lib.tufts.edu/">A New
           Nation Votes: American Election Returns 1787-1825</a>"
           is a searchable collection of election returns from the
@@ -29,7 +44,9 @@
 
           <p><a
           href="http://elections.lib.tufts.edu/about.html">Learn
-          more about the  election records project</a>. "A New
+          more about the  election records project</a>.</p>
+
+          <p>"A New
           Nation Votes" was made possible with generous help from
           the National Endowment for the Humanities.</p>
       </div>
