--- a/app/views/about/dagomba_dance_drumming.html.erb
+++ b/app/views/about/dagomba_dance_drumming.html.erb
@@ -14,6 +14,21 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
+        <h2>The Dagomba Dance-Drumming Project</h2>
+
+        <p>
+
+        <div id="static_thumbnail">
+          <ul class="thumbnails ">
+            <li class="span3">
+              <div class="thumbnail">
+                <img src="/assets/img/drummers-large.jpg" alt="Drummers in Dagbon">
+
+              </div>
+            </li>
+          </ul>
+        </div>
+
           <p>The <a
           href="https://wikis.uit.tufts.edu/confluence/display/DagombaDanceDrumming/">Dagomba
           Dance-Drumming Project</a> is the result of a
