--- a/app/views/about/wriston_collection.html.erb
+++ b/app/views/about/wriston_collection.html.erb
@@ -14,6 +14,21 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
+        <h2>Walter B. Wriston Archives</h2>
+
+        <p>
+
+        <div id="static_thumbnail">
+          <ul class="thumbnails ">
+            <li class="span3">
+              <div class="thumbnail">
+                <a href="http://preview-dl.lib.tufts.edu/catalog/tufts:MS134.006.035.00004"><img src="http://preview-dl.lib.tufts.edu/file_assets/tufts:MS134.006.035.00004" alt="Walter B. Wriston seated in lawn chair, 1938"></a>
+
+              </div>
+            </li>
+          </ul>
+        </div>
+
           <p>The <a
           href="http://dca.lib.tufts.edu/features/wriston/">Walter B. Wriston Archives</a> provides access to
           hundreds of articles, speeches, photographs, and other
