--- a/app/views/about/e_scholarship.html.erb
+++ b/app/views/about/e_scholarship.html.erb
@@ -14,35 +14,51 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
+        <h2>E-scholarship</h2>
+
+        <p>
+
+        <div id="static_thumbnail">
+          <ul class="thumbnails ">
+            <li class="span3">
+              <div class="thumbnail">
+                
+                 <a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA015.001.003.00072.00005"><img src="http://dev-dl.lib.tufts.edu/file_assets/tufts:UA015.001.003.00072.00005" alt="Students studying, Fletcher School of Law and Diplomacy, 1975"></a>
+
+              </div>
+            </li>
+          </ul>
+        </div>
+
           <p>The Tufts Digital Library has a growing collection
           of scholarship by faculty, students, and staff.</p>
           <ul>
               <li><a
-              href="/catalog?f[collection_facet][]=Faculty+scholarship&search_field=all_fields&utf8=%E2%9C%93#">Faculty
-              scholarship</a>. Hint: expand the "Names" facet in
+              href="/catalog?f[collection_facet][]=Faculty+Scholarship">Faculty
+              scholarship</a>. Expand the "Names" facet in
               the left-hand navigation for a quick glimpse at the
               faculty who deposited work. </li>
               <li><a
-              href="/catalog?f[collection_facet][]=Graduate+scholarship&search_field=all_fields&utf8=%E2%9C%93">Graduate
+              href="/catalog?f[collection_facet][]=Graduate+Scholarship&search_field=all_fields&utf8=%E2%9C%93">Graduate
               scholarship</a>. This collection is composed of the
               work of students from the <a
               href="http://fletcher.tufts.edu/">Fletcher School
               of Law and Diplomacy</a>, primarily theses from the
               programs <a
-              href="/catalog?f[collection_facet][]=Graduate+scholarship&f[subject_facet][]=MALD+Thesis&search_field=all_fields&utf8=%E2%9C%93">Master
+              href="/catalog?f[collection_facet][]=Graduate+Scholarship&f[subject_facet][]=MALD+Thesis&search_field=all_fields&utf8=%E2%9C%93">Master
               of Arts in Law and Diplomacy</a> (MALD), <a
-              href="/catalog?f[collection_facet][]=Graduate+scholarship&f[subject_facet][]=LLM+thesis&search_field=all_fields&utf8=%E2%9C%93">Master
+              href="/catalog?f[collection_facet][]=Graduate+Scholarship&f[subject_facet][]=LLM+Thesis&search_field=all_fields&utf8=%E2%9C%93">Master
               of Laws in International Law</a> (LLM), and <a
-              href="/catalog?f[collection_facet][]=Graduate+scholarship&f[subject_facet][]=MIB+Thesis&search_field=all_fields&utf8=%E2%9C%93">Master
+              href="/catalog?f[subject_facet][]=MIB Thesis">Master
               of International Business</a> (MIB). </li>
               <li><a
               href="/catalog/ead/tufts:UA069.001.DO.UA071">Department
               of Education Qualifying Papers</a>. </li>
               <li><a
-              href="/catalog?f[collection_facet][]=Undergraduate+scholarship&search_field=all_fields&utf8=%E2%9C%93#">Undergraduate
+              href="/catalog?f[collection_facet][]=Undergraduate+Scholarship&search_field=all_fields&utf8=%E2%9C%93#">Undergraduate
               scholarship</a>. This collection is primarily
-              composed of undergraduate honors theses. Hint:
-              expand the "Subject" facet in the left-hand
+              composed of undergraduate honors theses.
+              Expand the "Subject" facet in the left-hand
               navigation for a glimpse at the departments from
               which these papers originate. </li>
           </ul>
