TDLR-373 adding a second-level header (and an image) to the contact page

--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -13,22 +13,13 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
+      <h2>Contact DCA</h2>
   <p>The Tufts Digital Library welcomes and encourages your
           questions, comments, and feedback. Your input is important to us
           and contributes to the development of the TDL. Please contact us
           in any of the following ways.</p>
           
-          <h2>By mail, phone, or email:</h2>
-          
-          <p>Tufts Digital Library<br />
-          c/o Digital Collections and Archives<br />
-          Tisch Library Building<br />
-          35 Professors Row<br />
-          Medford, MA 02155<br />
-          dl_feedback@tufts.edu<br />
-          Phone: 617.627.3737</p>
-          
-          <h2>By feedback form:</h2>
+         <h3>By feedback form:</h3>
 
         <% unless @errors.empty? %>
             <strong>Please fix the following form errors:</strong>
@@ -48,7 +39,23 @@
               <%= label_tag '' %><%= submit_tag 'Send!' %>
             </fieldset>
         <% end %>
+          <h3>By mail, phone, or email:</h3>
+          
+          <p>Tufts Digital Library<br />
+          c/o Digital Collections and Archives<br />
+          Tisch Library Building<br />
+          35 Professors Row<br />
+          Medford, MA 02155<br />
+          dl_feedback&#x0040;tufts.edu<br />
+          Phone: 617.627.3737</p>
+          
+        <div id="static_thumbnail">
+           <div>
+              <a href="http://preview-dl.lib.tufts.edu/catalog/tufts:UA009.011.029.00009"><img src="http://preview-dl.lib.tufts.edu/file_assets/tufts:UA009.011.029.00009" alt="Boy Writing, Eliot-Pearson Department of Child Development" width="250px"></a>
+           </div>
+        </div>
 
+ 
 
       </div>
 
@@ -67,4 +74,5 @@
       </div>
     </div>
   </div>
+
 </div>
