TDLR-371 TDLR-370 bad links on the featured exhibit pages for Murrow and Wriston

--- a/app/views/about/murrow_collection.html.erb
+++ b/app/views/about/murrow_collection.html.erb
@@ -37,8 +37,7 @@
           You can read more about
           Edward R. Murrow at <a href="http://dca.lib.tufts.edu/features/murrow/exhibit/">The Life and Work of Edward R. Murrow: an Archives Exhibit</a>. You can read
           more about both the digitized and non-digitized materials from the collection by reading <a href="/catalog/ead/tufts:UA069.001.DO.MS025">the finding aid</a>. Or
-          you can dive right into the <a href="/catalog?f[collection_facet][]=Edward+R.+Murrow%2C+papers%2C+1927-65&search_field=all_fields&utf8=%E2%9C%93">digitized materials from the collection</a>, where we have
-          <a href="/catalog?f[collection_facet][]=Edward+R.+Murrow%2C+papers%2C+1927-65&f[object_type_facet][]=Images&search_field=all_fields&utf8=%E2%9C%93">331 images</a> and <a href="/catalog?f[collection_facet][]=Edward+R.+Murrow%2C+papers%2C+1927-65&f[object_type_facet][]=Audio&search_field=all_fields&utf8=%E2%9C%93">574 transcribed audio recordings from episodes of <cite>This I
+          you can dive right into the <a href="/catalog?f[collection_facet][]=Edward+R.+Murrow%2C+Papers%2C+1927-65">digitized materials from the collection</a>, where we have <a href="/catalog?f[collection_facet][]=Edward+R.+Murrow%2C+Papers%2C+1927-65&f[object_type_facet][]=Images&search_field=all_fields&utf8=%E2%9C%93">331 images</a> and <a href="/catalog?utf8=%E2%9C%93&per_page=25&utf8=%E2%9C%93&keyword=&title=%22this+I+believe%22&author=&collection=&year_start=&year_end=&description=&organization=&people=&place=&topic=&search_field=advanced&commit=Search">574 transcribed audio recordings from episodes of <cite>This I
           Believe</cite></a>.</p>
 
         <p>
