--- a/app/views/about/wriston_collection.html.erb
+++ b/app/views/about/wriston_collection.html.erb
@@ -39,7 +39,7 @@
           exhibit portal for the Walter B. Wriston archives</a>,
           <a
           href="dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.MS134">read more about the materials in the collection</a>, or just browse the <a
-          href="http://dev-dl.lib.tufts.edu/catalog?f[collection_facet][]=Walter+B.+Wriston+papers%2C+1918-2006&search_field=all_fields&utf8=%E2%9C%93">digital
+          href="http://dev-dl.lib.tufts.edu/catalog?f[collection_facet][]=Walter+B.+Wriston+Papers%2C+1918-2006&search_field=all_fields&utf8=%E2%9C%93">digital
           objects from the Walter B. Wriston collection</a>
           directly.</p>
       </div>
